--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,8 +20,12 @@ set-option -sa  terminal-overrides  ",xterm*:Tc"
 set-option -g   default-command     bash
 set-option -g   history-limit       20000
 
-bind -n M-J previous-window
-bind -n M-K next-window
+bind -n M-h previous-window
+bind -n M-l next-window
+bind -n M-n new-window
+
+bind -n M-e set-window-option synchronize-panes on
+bind -n M-E set-window-option synchronize-panes off
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind %   split-window -h -c "#{pane_current_path}"
