--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,7 @@ set -g @monokai-show-right-sep  " "
 set -g @monokai-plugins         " "
 
 # List of plugins
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -17,15 +18,19 @@ set -g mouse on
 set-window-option -g mode-keys vi
 
 set-option -sa  terminal-overrides  ",xterm*:Tc"
-set-option -g   default-command     bash
-set-option -g   history-limit       20000
+set-option -gas terminal-overrides  ",xterm*:RGB"
+set-option -gas terminal-overrides  ',xterm*:Ss=\E[%p1%d q:Se=\E[ q'
+set-option -gas terminal-overrides  ',xterm*:XT'
+set-option -g   default-command     zsh
+set-option -g   history-limit       50000
 
-bind -n M-h previous-window
-bind -n M-l next-window
-bind -n M-n new-window
 
-bind -n M-e set-window-option synchronize-panes on
-bind -n M-E set-window-option synchronize-panes off
+bind -n C-j previous-window
+bind -n C-k next-window
+bind -n C-\\ new-window
+
+bind -n C-e set-window-option synchronize-panes on
+bind -n C-E set-window-option synchronize-panes off
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind %   split-window -h -c "#{pane_current_path}"
