--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,12 +25,8 @@ set-option -g   default-command     zsh
 set-option -g   history-limit       50000
 
 
-bind -n C-j previous-window
-bind -n C-k next-window
-bind -n C-\\ new-window
-
-bind -n C-e set-window-option synchronize-panes on
-bind -n C-E set-window-option synchronize-panes off
+#bind -n C-e set-window-option synchronize-panes on
+#bind -n C-E set-window-option synchronize-panes off
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind %   split-window -h -c "#{pane_current_path}"
