--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -174,3 +174,15 @@ backspace = ['close-all-windows-but-current', 'mode main']
 
 [mode.apps.binding]
 alt-w = ['exec-and-forget open -a /Applications/WezTerm.app', 'mode main']
+
+[workspace-to-monitor-force-assignment]
+1  = [      1]
+2  = [      1]
+3  = [      1]
+4  = [      1]
+5  = [      1]
+6  = [   2, 1]
+7  = [   2, 1]
+8  = [   2, 1]
+9  = [3, 2, 1]
+10 = [3, 2, 1]
