--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,8 +25,8 @@ set-option -g   default-command     zsh
 set-option -g   history-limit       50000
 
 
-#bind -n C-e set-window-option synchronize-panes on
-#bind -n C-E set-window-option synchronize-panes off
+bind e set-window-option synchronize-panes on
+bind E set-window-option synchronize-panes off
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind %   split-window -h -c "#{pane_current_path}"
@@ -34,3 +34,8 @@ bind %   split-window -h -c "#{pane_current_path}"
 bind-key -T copy-mode-vi v   send-keys -X begin-selection
 bind-key -T copy-mode-vi C-q send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
+
+bind o command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind O confirm kill-session
+
+bind K new-window -c "#{pane_current_path}"
